# code-scanning

./: .gitignore  .semgrepignore  CONTRIBUTING.md  LICENSE  LICENSE.spdx  NOTICE  README.md  allow-list.xml  horusec-config.json  package-lock.json  run-dc.sh
.github/workflows/: cve-scanning-docker.yml  cve-scanning-dotnet.yml  cve-scanning-gradle.yml  cve-scanning-maven.yml  cve-scanning-node.yml  cve-scanning-python.yml  cve-scanning-rust.yml  cve-scanning-scala.yml  gradle.yml  license-scanning-dotnet.yml  license-scanning-gradle.yml  license-scanning-maven.yml  license-scanning-node.yml  license-scanning-python.yml  license-scanning-rust.yml  maven.yml  node.yml  poetry.yml  python.yml  rust.yml  scala.yml  semgrep-ci.yml  semgrep.yml  test-dc-action.yml  test-dc-action.yml.disabled
docker/: Dockerfile
dotnet/: allow-list.xml  allowed-licenses.json  sample.csproj
gradle/: allow-list.xml  allowed-licenses.json  build.gradle  license-normalizer-bundle.json
maven/: allow-list.xml  pom.xml  suppressions.xml
mill/: README.md  build.sc
node/: allow-list.json  allow-list.xml  index.js  package-lock.json  package.json  test.js
python/: pyproject.toml  safety-policy.yml
python/helloworld/: __init__.py  cli.py  model.py
python/tests/: test_user.py
python/vulnblog/: __init__.py  auth.py  blog.py  db.py  schema.sql
python/vulnblog/templates/: base.html
python/vulnblog/templates/blog/: index.html  update.html
rust/: Cargo.toml  README.md  license.licrc
rust/src/: main.rs
scala/: build.sbt
scala/project/: plugins.sbt
scala/src/main/g8/: build.sbt
(+4 files in other folders)
