[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = "Just a sample project"
homepage = "https://github.com/finos"
authors = ["Maurizio Pillitu <maoo@finos.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
colorama = ""
safety = "2.0.0"

[tool.poetry.dev-dependencies]
black = ""
pylint = ""
pytest = ""
pytest-dotenv = ""
pytest-cov = ""
rope = ""

[tool.poetry.scripts]
helloworld = 'helloworld.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
