[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = "Just a sample project"
homepage = "https://github.com/finos"
authors = ["FINOS <info@finos.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.5"
safety = "2.3.1"
# Enable it to see the scan failing, although ignored by safety-policy.yml
insecure-package = "0.1.0"

[tool.poetry.scripts]
helloworld = 'helloworld.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
